Fixing date picker layout issue.

--- a/app/assets/stylesheets/_base.sass
+++ b/app/assets/stylesheets/_base.sass
@@ -71,6 +71,8 @@ article
 
 // TODO: extract
 // Pickadate overrides
+.picker
+  z-index: 1001 !important
 
 .picker__input.picker__input--active
   border: none
